@@ -23,6 +23,8 @@ Version 1.7.3
        commands for the root. (Stefan)
 - BUG: Line wrapping problems in Log
        Messages dialog. (Stefan)
+- BUG: Issue #166: TortoiseMerge slow with
+       long lines. (Stefan)
 
 Version 1.7.2
 - BUG: Issue #111: Crash in initializing
